# university_programming_in_python

./: README.md  pyproject.toml
exercise_10/: countries_data.csv  function_plotter.py  population_data.json  population_visualizer.py  worldbank_visualizer.py
exercise_11/: bike_analysis.py  students_dataframe_analysis.py  text_analysis.py
exercise_12/: libraries_comparison.md  sentiment_analysis.py
exercise_1_Програмування_розгалужених_структур_та_циклічних_алгоритмів/: even_odd_calculator.py  pattern_generator.py  solve_equations.py
exercise_2_Створення_функцій_користувача_та_модулів_програми/: main.py  my_math_module.py
exercise_3_Робота_з_рядками/: string_slicing.py
exercise_4/: array_even_index_sum.py  list_split.py  set_operations.py
exercise_4_Обробка_масивів/: array_even_index_sum.py  checkerboard_array.py  list_split.py  set_operations.py  word_search.py
exercise_5_Робота_зі_словником/: students_manager.py
exercise_6/: student_academic_records.py  students_data.json
exercise_7/: TF12_1.txt  TF12_2.txt  tf12_file_processor.py
exercise_8/: collaborative_file.py  collaborative_qa.txt
exercise_9/: height_comparison_result.json  population_data.csv  population_processor.py  students_data.json  students_height_processor.py  ukraine_population_results.csv
