[project]
name = "programming-in-python"
version = "0.1.0"
description = "University course repository for Programming in Python"
readme = "README.md"
authors = [
    { name = "isnastish", email = "paukden12@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "ruff>=0.14.2",
]
